bug 295596: <li> was closing styles on the transient style stack for no good reason, causing them to be lost. This special-cases <li> to not do that. r=bzbarsky sr=jst a=shaver